--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:app": "cd application && npm start && cd ..",
     "start:server": "cd server && npm start && cd ..",
-    "start": "npm run start:app | npm run start:server"
+    "start": "npm run start:app | npm run start:server",
+    "install:app": "cd application && npm install && cd ..",
+    "install:server": "cd server && npm install && cd ..",
+    "init": "npm run install:app && npm run install:server"
   },
   "author": "",
   "license": "ISC"
