--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "@types/body-parser": "^1.17.0",
     "@types/cookie-session": "^2.0.37",
     "@types/express": "^4.17.0",
+    "@types/node-fetch": "^2.3.7",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^1.19.1"
   }
 }
